# MangaReaderHarmony

./: .gitignore  index.js  package-lock.json  package.json  readme.md
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/values/: styles.xml
harmony/: .gitignore  build-profile.json5  oh-package-lock.json5  oh-package.json5
harmony/AppScope/: app.json5
harmony/AppScope/resources/base/element/: string.json
harmony/entry/: .gitignore  build-profile.json5  oh-package-lock.json5  oh-package.json5
harmony/entry/src/main/: module.json5
harmony/entry/src/main/cpp/: CMakeLists.txt  PackageProvider.cpp
harmony/entry/src/main/ets/: RNPackagesFactory.ets
harmony/entry/src/main/ets/entryability/: EntryAbility.ets
harmony/entry/src/main/ets/pages/: Index.ets
harmony/entry/src/main/ets/rn/: BasePrecreateView.ets  BaseRN.ets  LoadBundle.ets  MetroBaseRN.ets  RNPackagesFactory.ets  config.ts  index.ets
harmony/entry/src/main/ets/workers/: RNOHWorker.ets
harmony/entry/src/main/resources/base/element/: color.json  string.json
harmony/entry/src/main/resources/en_US/element/: string.json
harmony/entry/src/main/resources/zh_CN/element/: string.json
ios/MangaReader/: BootSplash.storyboard  Info.plist
ios/MangaReader.xcodeproj/: project.pbxproj
ios/MangaReader/Images.xcassets/BootSplashLogo-903728.imageset/: Contents.json
src/: App.tsx
src/components/: Header.tsx
src/hooks/: useVolumeUpDown.ts
src/plugins/: mhdb.ts
src/redux/: saga.ts
src/utils/: cache.ts  common.ts
